remove unused plugin that is breaking build